# firehose-algorand

./: .dockerignore  .gitignore  Cargo.toml  DEMO_UPLOAD.md  Dockerfile  README.md  SUBSTREAMS.md  algorand-substreams-demo.cast  build.rs  docker-compose.yml  manifest.yaml  output.pb  substreams.yaml
.cargo/: config.toml
proto/: block.proto
proto/algorand/firehose/v1/: output.proto
proto/sf/algorand/type/v1/: type.proto
src/: decode.rs  lib.rs  parser.rs  stream.rs  substreams.rs
