[package]
name = "firehose-algorand"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
tonic = "0.11"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
prost = { version = "0.11", features = ["prost-derive"] }
prost-types = "0.11"
log = "0.4"
env_logger = "0.10"
prost-serde = "0.3"

[build-dependencies]
prost-build = "0.11"

[[bin]]
name = "decode"
path = "src/decode.rs"
